Fix spacing for public feed

--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -50,5 +50,9 @@ body,p,h1,h2,h3,h4,h5 {
 	margin-left: 20px;
 }
 
-
+.review-carousel-name {
+  padding-top: 35px;
+  font-size: 1.3em;
+  margin-left: 6px;
+}
 
